--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8">
-  <title>Mini gra QR – etap 3</title>
+  <title>Mini gra QR – etap 4</title>
   <script src="https://unpkg.com/html5-qrcode"></script>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; }
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<h1>Mini gra QR – etap 3</h1>
+<h1>Mini gra QR – etap 4</h1>
 
 <div id="screen-init">
   <p>Zeskanowałeś kod startowy.</p>
@@ -42,9 +42,9 @@
   let currentTarget = null;
   let lastTarget = null;
   let points = 0;
-  let history = [];
   let scored = new Set();
-  let countdown = 5;
+  let previousTargets = [];
+  let countdown = 3;
   let countdownInterval;
   let html5QrCode;
 
@@ -55,7 +55,7 @@
 
   function startCountdown() {
     clearInterval(countdownInterval);
-    countdown = 5;
+    countdown = 3;
     document.getElementById("timerInfo").innerText = `Pozostały czas: ${countdown}s`;
 
     countdownInterval = setInterval(() => {
@@ -69,12 +69,13 @@
   }
 
   function handleTimeout() {
-    if(history.length > 0) {
-      status.innerText = "Cofanie do poprzedniego kodu...";
-      currentTarget = history.pop();
-      lastTarget = history[history.length-1] || null;
+    if(previousTargets.length > 1) { // ostatni kod to aktualny, cofamy do poprzedniego
+      previousTargets.pop(); // usuń aktualny
+      currentTarget = previousTargets[previousTargets.length - 1];
+      lastTarget = previousTargets[previousTargets.length - 2] || null;
       targetInfo.innerText = `Zeskanuj kod: ${currentTarget}`;
-      startCountdown(); // restart zegara
+      status.innerText = "Cofanie do poprzedniego kodu...";
+      startCountdown();
     } else {
       endGame("Nie udało się zeskanować żadnego kodu. Gra zakończona.");
     }
@@ -85,6 +86,7 @@
     const next = available[Math.floor(Math.random() * available.length)];
     lastTarget = next;
     currentTarget = next;
+    previousTargets.push(currentTarget); // zapis dla cofania
     targetInfo.innerText = `Zeskanuj kod: ${currentTarget}`;
     startCountdown();
   }
@@ -122,7 +124,6 @@
           }
           pointsEl.innerText = points;
           status.innerText = "DOBRZE!";
-          history.push(currentTarget);
           if(points >= 5) {
             endGame("Wygrana! Zdobyłeś 5 punktów.");
           } else {
@@ -152,5 +153,3 @@
 
 </body>
 </html>
-
-
